web/themes/utmusic/components/02-molecules/sliding-door-menu/_sliding-item.scss
%overlay-link-card {
  // Overlay link.
  a::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    content: '';
  }
}

.m-sliding-item {
  position: relative;
  display: grid;
  grid-template-areas: "slide";
}

.m-sliding-item__image {
  grid-area: slide;

  img {
    border-radius: 0; 

    @include breakpoint($bp-large) {
      filter: saturate(0);
    }
  }
}

.m-sliding-item__image-gradient {
  width: 100%;
  height: 100%;
  grid-area: slide;
  align-self: end;
  // background: linear-gradient(0deg, rgba(8,8,8,1) 15%, rgba(255,255,255,0) 100%);
  background: linear-gradient(0deg, rgb(0% 0% 0%) 0%, rgb(0% 0% 0% / 0.9998779296875) 15%, rgb(0% 0% 0% / 0.998046875) 17.5%, rgb(0% 0% 0% / 0.9901123046875) 18.75%, rgb(0% 0% 0% / 0.96875) 25%, rgb(0% 0% 0% / 0.9237060546875) 31.25%, rgb(0% 0% 0% / 0.841796875) 37.5%, rgb(0% 0% 0% / 0.7069091796875) 43.75%, rgb(0% 0% 0% / 0.5) 50%, rgb(0% 0% 0% / 0.2930908203125) 56.25%, rgb(0% 0% 0% / 0.158203125) 62.5%, rgb(0% 0% 0% / 0.0762939453125) 68.75%, rgb(0% 0% 0% / 0.03125) 75%, rgb(0% 0% 0% / 0.0098876953125) 81.25%, rgb(0% 0% 0% / 0.001953125) 87.5%, rgb(0% 0% 0% / 0.0001220703125) 93.75%, rgb(0% 0% 0% / 0) 100% );
  opacity: 1;
  z-index: 0;
}

.m-sliding-item__link {
  @extend %overlay-link-card;
  grid-area: slide;
  position: relative;

  h3 {
    height: 100%;
    display: grid;
    align-items: end;
    margin-bottom: 0;
  }

  .a-heading__h5 a {
    color: var(--c-sliding-menu-link);
    padding-left: var(--spacer);
    padding-bottom: var(--spacer);
    transition: display 0.2s cubic-bezier(.12,.78,.74,.9);

    svg {
      fill: currentColor;
    }

    &:hover,
    &:focus,
    &:active {
      color: var(--c-sliding-menu-link--active);
      text-decoration: none;

      svg {
        fill: currentColor;
      }
    }

    &.js-hidden {
      display: none;
    }
  }
}



//admin-preview 
.field--name-field-sliding-menu-item-image {
  height: 100%;

  .media--type-ed-image {
    height: 100%;
  }
}

